--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -10,5 +10,13 @@
         <h1>
             Hello World!!!
         </h1>
+
+        <p lang="gr">
+            Ο Έμμηνος, ή Καταμήνιος κύκλος αποτελείται από τις φυσιολογικές αλλαγές που συμβαίνουν σε μία γυναίκα
+            αναπαραγωγικής ηλικίας, με σκοπό την παραγωγή ενός ώριμου ωαρίου, έτοιμου να γονιμοποιηθεί.
+        </p>
+        <p lang="gr">
+            Η ρύθμιση του έμμηνου κύκλου γίνεται με 4 ορμόνες.
+        </p>
     </body>
 </html>
