--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>My First Webpage</title>
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <title>My First Webpage</title>
+  </head>
 
-    <body>
-        <h1>
-            Hello World!!!
-        </h1>
+  <body>
+    <h1>
+      Hello World!!!
+    </h1>
 
-        <p lang="gr">
-            Ο Έμμηνος, ή Καταμήνιος κύκλος αποτελείται από τις φυσιολογικές αλλαγές που συμβαίνουν σε μία γυναίκα
-            αναπαραγωγικής ηλικίας, με σκοπό την παραγωγή ενός ώριμου ωαρίου, έτοιμου να γονιμοποιηθεί.
-        </p>
-        <p lang="gr">
-            Η ρύθμιση του έμμηνου κύκλου γίνεται με 4 ορμόνες.
-        </p>
-    </body>
+    <p lang="gr">
+      Ο Έμμηνος, ή Καταμήνιος κύκλος αποτελείται από τις φυσιολογικές αλλαγές που συμβαίνουν σε μία γυναίκα
+      αναπαραγωγικής ηλικίας, με σκοπό την παραγωγή ενός ώριμου ωαρίου, έτοιμου να γονιμοποιηθεί.
+    </p>
+    <p lang="gr">
+      Η ρύθμιση του έμμηνου κύκλου γίνεται με 4 <strong>ορμόνες</strong>:
+      <em>1. FSH, 2. LH, 3. Οιστρογόνα και 4. Προγεστερόνη</em>.
+      <!-- Comment -->
+    </p>
+  </body>
 </html>
