--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Webpage</title>
+    <title>Έμμηνος Κύκλος</title>
   </head>
 
   <body>
     <h1>
-      Hello World!!!
+      Ο Έμμηνος Κύκλος
     </h1>
 
     <p lang="gr">
