--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -16,9 +16,28 @@
       αναπαραγωγικής ηλικίας, με σκοπό την παραγωγή ενός ώριμου ωαρίου, έτοιμου να γονιμοποιηθεί.
     </p>
     <p lang="gr">
-      Η ρύθμιση του έμμηνου κύκλου γίνεται με 4 <strong>ορμόνες</strong>:
-      <em>1. FSH, 2. LH, 3. Οιστρογόνα και 4. Προγεστερόνη</em>.
-      <!-- Comment -->
+      Η ρύθμιση του έμμηνου κύκλου γίνεται με <strong>4 ορμόνες</strong>:
     </p>
+    
+    <!-- Lists -->
+    <!-- Unordered -->
+    <ul>
+      <li>FSH</li>
+      <li>LH</li>
+      <li>Οιστρογόνα</li>
+      <li>Προγεστερόνη</li>
+      </li>
+    </ul>
+
+    <p>
+      Ο Έμμηνος Κύκλος διαιρείται σε 4 φάσεις:
+    </p>
+    <!-- Ordered -->
+    <ol>
+      <li><strong>Αιμοραγική</strong> φάση, ή <strong>Εμμηνορρυσία</strong>: Το ενδομήτριο καταρρέει και αποβάλλεται. (Σκοπός;)</li>
+      <li><strong>Ωοθυλακική</strong> φάση: Το ωάριο ωριμάζει στις ωοθήκες.</li>
+      <li><strong>Ωορρηξία</strong>: Το ωάριο απελευθερώνεται.</li>
+      <li><strong>Ωχρινική</strong> φάση: Απελευθέρωση Προγεστερόνης.</li>
+    </ol>
   </body>
 </html>
